@startuml sistema-alquileres

class User {
    - name
    - lastname
    - phone_number
    - email_address
    - password
}

class Role {
    - name
    - description
}

class Booking {
    - user_id
    - apartment_id
    - start_booking
    - finish_booking
    - duration
    - amount_people
}

class Apartment {
    - number_of_apartment
    - size
    - amount_rooms
    - features
    - availability
    - lease
    - address
}

class users_roles {
    - user_id
    - role_id
}

User "1" -- "n" Booking : has
Apartment "1" -- "n" Booking : has
User "many" -- "many" users_roles : to
Role "many" -- "many" users_roles : to

@enduml